--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Legal Documents</title>
 </head>
 <body>
-    <a href="privacy-policy.md">Privacy Policy</a>
+    <a href="privacy-policy">Privacy Policy</a>
     <br>
-    <a href="terms-and-conditions.md">Terms and Conditions</a>
+    <a href="terms-and-conditions">Terms and Conditions</a>
 </body>
 </html>
